# Minesweeper

./: .gitignore  CMakeLists.txt  Makefile  README.md  app  board.cpp  board.h  constants.h  main.cpp  resource.cpp  resource.h  sfml-app
src/: board.cpp  constants.h  main.cpp  resource.cpp  resource.h  square.cpp  square.h
